--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,7 @@
     "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
