--- a/package.json
+++ b/package.json
@@ -13,16 +13,24 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@barba/core": "^2.10.3",
+    "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.5.2",
     "gsap": "^3.12.7",
-    "lenis": "^1.2.3"
+    "lenis": "^1.2.3",
+    "marked": "^15.0.8",
+    "swiper": "^11.2.6",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^4.1.2",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9.22.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-css-order": "^2.1.2"
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "video.js": "^8.22.0"
   }
 }
