--- a/src/docs/teaching.yml
+++ b/src/docs/teaching.yml
@@ -18,8 +18,6 @@
     We believe that it is important to bring those people in, and believe that apart from the traditional computer science teaching method, there is another kind of technology education that is more suitable for beginners and approachable.
   excerpt: |
     In collaboration with Taiwanese artist Yangching Lu, begin Contour is a teaching practicum. We invited many Taiwanese middle school teachers, art educators, experimental educators, designers, and creative coders to collectively reimagine creative technology through a more beginner-friendly and approachable technology education.
-
-    In a six-week process, we conducted lectures, discussions, workshops, and test runs to help them develop their own teaching tools and syllabus.
   link:
     text: "Read the project"
     href: "https://medium.com/processing-foundation/begincontour-%E5%BE%9E%E7%AD%89%E9%AB%98%E7%B7%9A%E9%96%8B%E5%A7%8B-a-critical-anti-colonial-and-intersectional-pedagogy-to-taiwanese-creative-f44d67fd0ccb"
@@ -46,7 +44,7 @@
   quote: |
     Together, we’ll examine the complexities of our contemporary technological landscape, starting by grounding ourselves in a redefinition of what ‘technology’ means to us.
   excerpt: |
-    A collaborative zine designed by students as part of the Techniculture 6-week workshop. Taught by the Space Type and Duty Free collective studios, this zine is a culmination our discussions and explorations reflecting the intricate relationships between type, culture, and technology. Included in this zine is a pixel typeface collaboratively developed by the students in class, along with artifacts from each session as facilitated by individuals in each collective.
+    A collaborative zine designed by students as part of the Techniculture 6-week workshop. Taught by the Space Type and Duty Free collective studios, this zine is a culmination our discussions and explorations reflecting the intricate relationships between type, culture, and technology.
   recognition:
     - "Co-taught by Munus Shih, Nikki Makagiansar, Tee Topor, Kevin Yeh, Lynne Yun"
     - "You can [buy the zine here](https://antennebooks.com/products/techniculture)"
