--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@barba/core": "^2.10.3",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.5.2",
+    "fluent-ffmpeg": "^2.1.3",
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "marked": "^15.0.8",
