--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^8.1.3",
     "@barba/core": "^2.10.3",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.5.2",
