--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "generatePoster": "node generatePosters.js",
+    "build": "npm run generatePoster && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
