--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lenis": "^1.2.3",
     "marked": "^15.0.8",
     "p5": "^1.11.3",
+    "playwright": "^1.52.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
