--- a/src/docs/work.yml
+++ b/src/docs/work.yml
@@ -16,7 +16,7 @@
 
 - title: "GOCA"
   date: 2025
-  tag: "Web Design, Generative Design"
+  tag: "Website, Generative Design"
   images:
     - "/goca/video.mp4"
     - "/goca/img.jpg"
@@ -42,7 +42,7 @@
 
 - title: "New Museum"
   date: 2024
-  tag: "Web Design, Web Development"
+  tag: "Website"
   images:
     - "/new-museum/video3.mp4"
     - "/new-museum/video.mp4"
