--- a/src/docs/events.yml
+++ b/src/docs/events.yml
@@ -1,3 +1,10 @@
+- title: "Touching Computers: NFC as Ritual, Memory, and Interface ft. Spencer Chang"
+  date: "Jun 19, 2025"
+  type: "Workshop"
+  place: "FORMOSAN ASSOCIATION for PUBLIC AFFAIRS"
+  link:
+    href: "https://spencer.place/fapa-webstones"
+
 - title: "Demo Day 2025"
   date: "June, 2025"
   type: "Exhibition"
