--- a/src/docs/press.yml
+++ b/src/docs/press.yml
@@ -1,3 +1,11 @@
+- title: "Vocal Media"
+  date: "May, 2025"
+  tag: "Interview"
+  quote: |
+    I’m always exploring different mediums to convey the message, so seeing how it resonates with the viewers in different formats—whether digital or physical—is always a rewarding experience.
+  link:
+    href: "https://vocal.media/interview/bridging-worlds-taiwanese-creative-technologist-munus-on-innovation-identity-and-the-power-of-open-source"
+
 - title: "ShoutoutLA"
   date: "Apr, 2025"
   tag: "Interview"
