Add resume PDF generation and related components
Introduced new resume page and layout components, including PDFResumeText and Resume.astro. Added API endpoint for serving resume as PDF. Updated FullListCard, about page, and documentation files. Added Puppeteer and related dependencies for PDF generation.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked": "^15.0.8",
     "p5": "^1.11.3",
     "playwright": "^1.52.0",
+    "puppeteer": "^24.17.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
