--- a/src/docs/education.yml
+++ b/src/docs/education.yml
@@ -1,5 +1,7 @@
 - title: "M.F.A. Design and Technology"
   note: "Parsons School of Design, The New School"
+  date: "2021 - 2023"
 
-- title: "B.S. Engineeringa and System Science"
+- title: "B.S. Engineering and System Science"
   note: "National Tsing Hua University"
+  date: "2016 - 2021"
