--- a/src/docs/events.yml
+++ b/src/docs/events.yml
@@ -1,13 +1,35 @@
+- title: "Graduate Studio: Technology A"
+  date: "Fall 2025"
+  type: "Class"
+  place: "Pratt Institute"
+  link:
+    href: "https://tech-a.munusshih.com/"
+
+- title: "Techno Mirage"
+  date: "Sep 2025"
+  type: "Panel"
+  place: "Underground Art and Design x Index Space"
+  link:
+    href: "https://www.uaad.art/technomirage"
+
+- title: "Combinatory Poetry with Variable Fonts ft. Nikki Makagiansar"
+  date: "June 29, 2025"
+  type: "Workshop"
+  place: "Typelab x Typographics, New York, NY, USA"
+  link:
+    href: "https://typelab.free99.work"
+
 - title: "Touching Computers: NFC as Ritual, Memory, and Interface ft. Spencer Chang"
   date: "Jun 19, 2025"
   type: "Workshop"
-  place: "FORMOSAN ASSOCIATION for PUBLIC AFFAIRS"
+  place: "Formosan Association for Public Affairs, New York, NY, USA"
   link:
     href: "https://spencer.place/fapa-webstones"
 
-- title: "Demo Day 2025"
+- title: "Embodied Algorithms / Collective Mechanics, DEMO Festival"
   date: "June, 2025"
   type: "Exhibition"
+  place: "NEW INC x WSA, New York, NY, USA"
   link:
     href: "https://www.demofestival.org/"
 
@@ -17,97 +39,97 @@
 
 - title: "Is Artschool The Uptopia We Were Promised?"
   date: "May 2025"
-  place: "National Taiwan University of Science and Technology"
+  place: "National Taiwan University of Science and Technology, Taipei, Taiwan"
   type: "Talk"
   link:
     href: "https://www.youtube.com/live/I3jfwLpwn_E"
 
 - title: "We Remember: Local Hakka Memorial"
   date: "May 2024"
-  place: "Hakka Affair Council, Taipei"
+  place: "Hakka Affair Council, Taipei, Taiwan"
   type: "Award"
 
 - title: "Processing Community Catalog Launch Party NYC"
   date: "June 2023"
   type: "Panel"
-  place: "Hex House, Brooklyn, NY"
+  place: "Hex House, Brooklyn, NY, USA"
   link:
     href: "https://www.instagram.com/p/CtemGlSRYld/?igshid=ZWQyN2ExYTkwZQ=="
 
 - title: "Entropy: MFA Design & Technology Thesis Symposium"
   date: "May 2023"
   type: "Conference"
-  place: "Parsons School of Design"
+  place: "Parsons School of Design, New York, NY, USA"
   link:
     href: "https://www.youtube.com/live/PCZQ1PKKUbo?feature=share&t=5614"
 
 - title: "2023 Open Source Art Contributor’s Conference"
   date: "Apr 2023"
   type: "Conference"
-  place: "University of Denver, Denver, CO"
+  place: "University of Denver, Denver, CO, USA"
   link:
     href: "https://www.instagram.com/p/CqLb2v4sDJF/?igshid=YmMyMTA2M2Y="
 
 - title: "p5.js Community Salon"
   date: "March 2023"
   type: "Panel"
-  place: "New York University"
+  place: "New York University, New York, NY, USA"
   link:
     href: "https://www.instagram.com/p/CqLb2v4sDJF/?igshid=YmMyMTA2M2Y="
 
 - title: "Coding Diversity: Tool-making & Crit Education"
   date: "Nov 2022"
   type: "Talk"
-  place: "Creative Coding Taiwan"
+  place: "Creative Coding Taiwan, Taipei, Taiwan"
   link:
     href: "https://www.youtube.com/embed/rFhtoRXEE30?si=vPArjHVq-sxvM83M&amp;controls=0&amp;start=1238"
   excerpt: |
     Delivered in Mandarin, this talk titled "Coding Diversity" was presented at the Creative Coding Taiwan community. I shared insights on my experience with critical tool-making, emphasizing how critical education and research contribute to fostering diversity in creative coding practices.
 
-- title: "DEMO 2024"
+- title: "Scaling Utopia: DEMO Festival"
   date: "June 2024"
   type: "Exhibition"
-  place: "WSA, NEW MUSEUM x NEW INC"
+  place: "NEW INC x WSA, New York, NY, USA"
   link:
     href: "https://2024.demofestival.org/"
 
 - title: "After MFADT"
   date: "Feb 2025"
   type: "Talk"
-  place: "Could Salon, Parsons School of Design"
+  place: "Could Salon, Parsons School of Design, New York, NY, USA"
 
 - title: "Dragon Bytes: Coding Chinese New Year with p5.js and AI ft. Roy Yang"
   date: "Jan 2024"
   type: "Workshop"
-  place: "CC Festival, The Dalton School"
+  place: "CC Festival, The Dalton School, New York, NY, USA"
   link:
     href: "https://www.notion.so/munusshih/NCTU-IAA-f9c5d9e4b9ed46f9ad6558f3f7465150?pvs=4"
 
 - title: "Taiwanese Queer Sound Map: From Design Inspiration to Social and Technological Praxis"
   date: "Dec 2023"
   type: "Talk"
-  place: "Women Techmakers Tracks x Google Developer Group devfest"
+  place: "Women Techmakers Tracks x Google Developer Group devfest, Taipei, Taiwan"
   link:
     href: "https://gdg.community.dev/events/details/google-gdg-taipei-presents-women-techmakers-tracks-devfest-taipei-2023/"
 
 - title: "Creative Coding: SVG and Canvas Workshop Series"
   date: "Oct 2023"
   type: "Workshop"
-  place: "Institue of Applied Art, National Yang Ming Chiao Tung University"
+  place: "Institute of Applied Art, National Yang Ming Chiao Tung University, Hsinchu, Taiwan"
   link:
     href: "https://www.notion.so/munusshih/NCTU-IAA-f9c5d9e4b9ed46f9ad6558f3f7465150?pvs=4"
 
 - title: "Hello Zine! 從小誌到開源藝術"
   date: "Sep 2023"
   type: "Workshop"
-  place: "Processing Community Day Taiwan"
+  place: "Processing Community Day Taiwan, Taipei, Taiwan"
   link:
     href: "https://www.youtube.com/live/QfgvuTZPCa0?si=VifKhDf5IUivzc6q"
 
 - title: "Why I Love p5.js & Creative Coding"
   date: "July 2023"
   type: "Talk"
-  place: "Type@Cooper"
+  place: "Type@Cooper, New York, NY, USA"
   link:
     href: "https://www.youtube.com/embed/zmmN-X1YS2c?si=2cETYG9GLRpcmn0E&amp;start=91"
   excerpt: |
@@ -123,82 +145,82 @@
 - title: "Style My Glitch: An HTML/CSS/JS Workshop ft. Simran Jagnik"
   date: "May 2021"
   type: "Workshop"
-  place: "National Taiwan University of Science and Technology"
+  place: "National Taiwan University of Science and Technology, Taipei, Taiwan"
 
 - title: "Design & Building A Portfolio using Cargo ft. KT Son"
   date: "Dec 2021"
   type: "Workshop"
-  place: "National Tsing Hua University"
+  place: "National Tsing Hua University, Hsinchu, Taiwan"
 
 - title: "Meta, Prototype, System: Design Cyborg"
   date: "Nov 2022"
   type: "Talk"
-  place: "'Visual Communication' at National Tsing Hua University"
+  place: "'Visual Communication' at National Tsing Hua University, Hsinchu, Taiwan"
 
 - title: "Will You Still Love Me If I’m A Designer?"
   date: "Nov 2022"
   type: "Talk"
-  place: "Tzaiwu College at National Tsing Hua University"
+  place: "Tzaiwu College at National Tsing Hua University, Hsinchu, Taiwan"
 
 - title: "CSS Magin! Transition, Transform and Animation"
   date: "June 2022"
   type: "Workshop"
-  place: "School of Visual Arts"
+  place: "School of Visual Arts, New York, NY, USA"
   link:
     href: "https://www.notion.so/munusshih/CSS-Magic-Click-Touch-Move-9589b601e9db449ca452906d2ca96e2f"
 
 - title: "p5.(Gen)Zine V.2"
   date: "June 2022"
   type: "Workshop"
-  place: "'Code Decolonized' with POWRPLNTS"
+  place: "Creative Coding Festival, New York, NY, USA"
   link:
     href: "https://www.youtube.com/watch?v=lAQc3Ij3O8k&ab_channel=ProcessingFoundation"
 
 - title: "p5.(Gen)Zine"
   date: "June 2022"
   type: "Workshop"
-  place: "'Code Decolonized' with POWRPLNTS"
+  place: "'Code Decolonized' with POWRPLNTS, Brooklyn, NY, USA"
   link:
     href: "https://medium.com/@ProcessingOrg/code-decolonized-x-powrplnt-symposium-2022-6433cc84e9c3"
 
 - title: "Prints as Interfaces"
   date: "Dec 2021"
   type: "Talk"
-  place: "'Visual Communication' at National Tsing Hua University"
+  place: "'Visual Communication' at National Tsing Hua University, Hsinchu, Taiwan"
 
 - title: "Flexible Design Systems & Dynamic Visual Identities"
   date: "Dec 2021"
   type: "Talk"
-  place: "TedX NTHU (Remote)"
+  place: "TedX NTHU (Remote), Hsinchu, Taiwan"
 
 - title: "*New* Graphic Design: Program, Data, Custom Algorithm"
   date: "Oct 2021"
   type: "Workshop"
-  place: "National Tsing Hua University"
+  place: "National Tsing Hua University, Hsinchu, Taiwan"
 
 - title: "Communication Design: An Outlier’s Perspective"
   date: "Oct 2021"
   type: "Talk"
-  place: "Parsons School of Design"
+  place: "Parsons School of Design, New York, NY, USA"
 
 - title: "Critical Computation Lab"
   date: "Fall 2023"
   type: "Class"
-  place: "Parsons School of Design"
+  place: "Parsons School of Design, New York, NY, USA"
   link:
     href: "https://parsonsdt.github.io/critical-computation-2023/tutorials.html"
 
 - title: "Advanced Design: Product Design"
   date: "Spring 2024"
   type: "Class"
-  place: "Cooper Union"
+  place: "Cooper Union, New York, NY, USA"
   link:
     href: "https://adpd.munusandniktari.com/"
 
 - title: "The Web is Fluid, Generative and Live"
   date: "Spring 2024"
   type: "Class"
-  place: "Parsons School of Design"
+  place: "Parsons School of Design, New York, NY, USA"
   images:
     - "/teaching/core-2.mp4"
   excerpt: |
@@ -209,7 +231,7 @@
 - title: "BeginContour 從等高線開始"
   date: "Dec 2022"
   type: "Fellowship"
-  place: "Processing Foundation"
+  place: "Processing Foundation, New York, NY, USA"
   images:
     - "/beginContour/pic.webp"
   quote: |
@@ -235,7 +257,7 @@
 - title: "Techniculture"
   date: "Feb 2024"
   type: "Workshop"
-  place: "Type Electives"
+  place: "Type Electives, New York, NY, USA"
   images:
     - ["/techniculture/zine.mp4", 1.5]
   quote: |
@@ -261,21 +283,26 @@
 
 - title: "Innovation & Career Exploration: Culture & Creative Industry"
   date: "Spring 2020"
-  place: "National Tsing Hua University"
+  place: "National Tsing Hua University, Hsinchu, Taiwan"
   type: "Class"
   link:
     href: "https://sites.google.com/view/tzaiwu-cc/last-semester?authuser=0"
 
 - title: "Future Museum: Creative Coding & Speculative Design"
-  place: "National Tsing Hua University"
+  place: "National Tsing Hua University, Hsinchu, Taiwan"
   date: "Fall 2020"
   type: "Class"
   link:
     href: "https://sites.google.com/view/tzaiwu-cc/home?authuser=0"
 
+- title: "Major Studio 2 (Thesis)"
+  place: "Parsons School of Design, New York, NY, USA"
+  date: "Spring 2023"
+  type: "Class - TA"
+
 - title: "Major Studio 1 (Thesis)"
-  place: "Parsons School of Design"
-  date: "Spring 2022"
-  type: "Class"
+  place: "Parsons School of Design, New York, NY, USA"
+  date: "Fall 2022"
+  type: "Class - TA"
   link:
     href: "https://github.com/munusshih/dv-majorstudio"
