--- a/src/docs/press.yml
+++ b/src/docs/press.yml
@@ -1,12 +1,14 @@
-- title: "Vocal Media"
+- title: "Bridging Worlds: Taiwanese Creative Technologist Munus on Innovation, Identity, and the Power of Open Source"
+  place: "Vocal Media"
   date: "May, 2025"
   tag: "Interview"
   quote: |
-    I’m always exploring different mediums to convey the message, so seeing how it resonates with the viewers in different formats—whether digital or physical—is always a rewarding experience.
+    I'm always exploring different mediums to convey the message, so seeing how it resonates with the viewers in different formats—whether digital or physical—is always a rewarding experience.
   link:
     href: "https://vocal.media/interview/bridging-worlds-taiwanese-creative-technologist-munus-on-innovation-identity-and-the-power-of-open-source"
 
-- title: "ShoutoutLA"
+- title: "Meet Munus Shih: Creative Technologist, Designer & Educator"
+  place: "ShoutoutLA"
   date: "Apr, 2025"
   tag: "Interview"
   quote: |
@@ -14,7 +16,8 @@
   link:
     href: "https://shoutoutla.com/meet-munus-shih-creative-technologist-designer-educator/"
 
-- title: "Bold Journey"
+- title: "Meet Munus Shih"
+  place: "Bold Journey"
   date: "Apr, 2025"
   tag: "Interview"
   quote: |
@@ -22,34 +25,38 @@
   link:
     href: "https://boldjourney.com/meet-munus-shih/"
 
-- title: "MSN.COM"
+- title: "NYC-Based Creative Technologist Munus Bridges Design and Technology Through Community and Code"
+  place: "MSN.COM"
   date: "March, 2025"
   tag: "Interview"
   quote: |
-    A creative technologist isn’t just someone who follows existing systems or uses tools in conventional ways;  (...)  They’re about innovation and creating something new with technology, not just using what's already been given to them.
+    A creative technologist isn't just someone who follows existing systems or uses tools in conventional ways;  (...)  They're about innovation and creating something new with technology, not just using what's already been given to them.
   link:
     href: "https://www.msn.com/en-us/news/technology/nyc-based-creative-technologist-munus-bridges-design-and-technology-through-community-and-code/ar-AA1zsphR"
 
-- title: "1883 Magazine"
+- title: "Munus Shih on Capturing the New York Design Aesthetic: A Fusion of Code, Culture and Creativity"
+  place: "1883 Magazine"
   date: "Feb, 2025"
   tag: "Interview"
   quote: |
-    I think a lot about designing for cultural institutions in a way that respects their legacy while also keeping their visual language alive and dynamic,” they explain. “New York has such a distinct design vernacular—full of vibrancy and constant evolution—and I try to reflect that in my work.
+    I think a lot about designing for cultural institutions in a way that respects their legacy while also keeping their visual language alive and dynamic," they explain. "New York has such a distinct design vernacular—full of vibrancy and constant evolution—and I try to reflect that in my work.
   link:
     href: "https://1883magazine.com/munus-shih-on-capturing-the-new-york-design-aesthetic-a-fusion-of-code-culture-and-creativity/"
 
-- title: "Canvas Rebel"
+- title: "Meet Munus Shih"
+  place: "Canvas Rebel"
   date: "Oct, 2024"
   tag: "Interview"
   quote: |
-    We’re deeply interested in how code can be used to augment research, artistic expression, and design in new, meaningful ways. Equally important, we view code as a framework for collaboration and a method of working.
+    We're deeply interested in how code can be used to augment research, artistic expression, and design in new, meaningful ways. Equally important, we view code as a framework for collaboration and a method of working.
   link:
     href: "https://canvasrebel.com/meet-munus-shih/"
 
-- title: "London Daily News"
+- title: "Creative Technologist Munus Shih on Fusing Together Art, Design and Code"
+  place: "London Daily News"
   date: "Feb, 2025"
   tag: "Interview"
   quote: |
-    Graphic design isn’t just a commercial tool—it can be a framework for world-building, social critique, and alternative economies (...) In the end, design became not just a medium of communication but a tool for reimagining systems and fostering an informed, engaged society.
+    Graphic design isn't just a commercial tool—it can be a framework for world-building, social critique, and alternative economies (...) In the end, design became not just a medium of communication but a tool for reimagining systems and fostering an informed, engaged society.
   link:
     href: "https://www.londondaily.news/creative-technologist-munus-shih-on-fusing-together-art-design-and-code/"
