--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "astro-loading-indicator": "^0.7.0",
     "fluent-ffmpeg": "^2.1.3",
     "gsap": "^3.12.7",
+    "html2canvas": "^1.4.1",
     "interactjs": "^1.10.27",
+    "jspdf": "^3.0.1",
     "lenis": "^1.2.3",
     "marked": "^15.0.8",
     "p5": "^1.11.3",
