Update experience locations in experiences.yml
Corrected the location for Cooper Union to 'New York, NY, USA' and clarified the Google Summer of Code role as 'Remote'.

--- a/src/docs/experiences.yml
+++ b/src/docs/experiences.yml
@@ -14,12 +14,12 @@
   type: "Professional"
 
 - title: "Adjunct Faculty"
-  place: "The Cooper Union for the Advancement of Science and Art, Manhattan, NY, USA"
+  place: "The Cooper Union for the Advancement of Science and Art, New York, NY, USA"
   date: "Jan 2024 - Jun 2024"
   type: "Teaching"
 
 - title: "Open Source Developer"
-  place: "Google Summer of Code x Processing Foundation, USA"
+  place: "Google Summer of Code x Processing Foundation, USA (Remote)"
   date: "June 2023 - Sep 2023"
   type: "Professional"
 
