Update experience title and print styles in resume
Changed 'Design Engineer Intern' to 'Design Engineer' in experiences.yml. Improved print styles in resume.astro by setting a default font size and adjusting h2 margin and border for better print formatting.

--- a/src/docs/experiences.yml
+++ b/src/docs/experiences.yml
@@ -33,7 +33,7 @@
   date: "Aug 2022 - Aug 2023"
   type: "Teaching"
 
-- title: "Design Engineer Intern"
+- title: "Design Engineer"
   place: "Design Systems International, Brooklyn, NY, USA"
   date: "May 2022 - Aug 2022"
   type: "Professional"
