Update education and events details
Removed date fields from education entries and added a new p5.js 2.0 workshop event. Also updated the date for the 'Techno Mirage' panel event.

--- a/src/docs/events.yml
+++ b/src/docs/events.yml
@@ -1,3 +1,10 @@
+- title: "p5.js 2.0 Workshop: Combinatory Poetry with Variable Fonts"
+  date: "Sep 27, 2025"
+  type: "Workshop"
+  place: "Processing Foundation"
+  link:
+    href: "https://www.eventbrite.com/e/p5js-20-workshop-combinatory-poetry-with-variable-fonts-tickets-1623313417129?aff=oddtdtcreator"
+
 - title: "Thesis I"
   date: "Fall 2025"
   type: "Class"
@@ -11,7 +18,7 @@
     href: "https://tech-a.munusshih.com/"
 
 - title: "Techno Mirage"
-  date: "Sep 2025"
+  date: "Sep 21, 2025"
   type: "Panel"
   place: "Underground Art and Design x Index Space, New York, NY, USA"
   link:
