Refactor homepage to use dynamic card data
Introduces a new data layer (contentSources.js) to load homepage and card content from YAML or Google Sheets, replacing hardcoded card props with dynamic rendering. Adds CustomCard component, updates all card components to support new props, and updates pages to use async data sources. Also adds exportYamlToCsv.js script, new homepage and writing YAML files, and updates global styles for custom card bodies.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+spreadsheets/books.csv
+spreadsheets/education.csv
+spreadsheets/events.csv
+spreadsheets/experiences.csv
+spreadsheets/homepage.csv
+spreadsheets/lab.csv
+spreadsheets/organizing.csv
+spreadsheets/press.csv
