Add teaching media caching and update scripts
Introduces scripts to cache teaching media assets and sync YAML data from Google Sheets. Adds teaching media files, a generated media manifest, and teaching utility functions. Updates teaching page and header navigation to use new teaching section and media manifest.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "generatePoster": "node generatePosters.js",
+    "cache:teaching-media": "node scripts/cacheTeachingMedia.js",
+    "sync:yml": "node scripts/updateYamlFromSheets.js",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
